syntax = "proto3";

package user;

import "google/api/annotations.proto";
import "protoc-gen-openapiv2/options/annotations.proto";

option go_package = "github.com/yinxi0607/YixiGroceryAPI/proto/user";

service UserService {
  rpc Register(RegisterRequest) returns (RegisterResponse) {
    option (google.api.http) = {
      post: "/api/auth/register"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Register a new user"
      description: "Create a new user account."
      tags: ["auth"]
    };
  }
  rpc Login(LoginRequest) returns (LoginResponse) {
    option (google.api.http) = {
      post: "/api/auth/login"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Login"
      description: "Authenticate user and return JWT token."
      tags: ["auth"]
    };
  }
  rpc GetUserInfo(GetUserInfoRequest) returns (GetUserInfoResponse) {
    option (google.api.http) = {
      get: "/api/users/me"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get user info"
      description: "Retrieve current user information."
      tags: ["user"]
      security: [{ BearerAuth: [] }]
    };
  }
  rpc AddAddress(AddAddressRequest) returns (AddAddressResponse) {
    option (google.api.http) = {
      post: "/api/users/addresses"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Add address"
      description: "Add a new address for the user."
      tags: ["address"]
      security: [{ BearerAuth: [] }]
    };
  }
  rpc UpdateAddress(UpdateAddressRequest) returns (UpdateAddressResponse) {
    option (google.api.http) = {
      put: "/api/users/addresses/{id}"
      body: "*"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Update address"
      description: "Update an existing address."
      tags: ["address"]
      security: [{ BearerAuth: [] }]
    };
  }
  rpc DeleteAddress(DeleteAddressRequest) returns (DeleteAddressResponse) {
    option (google.api.http) = {
      delete: "/api/users/addresses/{id}"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Delete address"
      description: "Delete a user address."
      tags: ["address"]
      security: [{ BearerAuth: [] }]
    };
  }
  rpc GetAddresses(GetAddressesRequest) returns (GetAddressesResponse) {
    option (google.api.http) = {
      get: "/api/users/addresses"
    };
    option (grpc.gateway.protoc_gen_openapiv2.options.openapiv2_operation) = {
      summary: "Get addresses"
      description: "Retrieve all addresses for the user."
      tags: ["address"]
      security: [{ BearerAuth: [] }]
    };
  }
}

message AddAddressRequest {
  uint32 user_id = 1;
  string receiver_name = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "Receiver name" }];
  string phone = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "Phone number" }];
  string address_detail = 4 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "Detailed address" }];
  bool is_default = 5 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "Is default address" }];
}

message AddAddressResponse {
  int32 code = 1;
  string message = 2;
  Address data = 3;
}

message UpdateAddressRequest {
  uint32 id = 1;
  uint32 user_id = 2;
  string receiver_name = 3;
  string phone = 4;
  string address_detail = 5;
  bool is_default = 6;
}

message UpdateAddressResponse {
  int32 code = 1;
  string message = 2;
  Address data = 3;
}

message DeleteAddressRequest {
  uint32 id = 1;
  uint32 user_id = 2;
}

message DeleteAddressResponse {
  int32 code = 1;
  string message = 2;
}

message GetAddressesRequest {
  uint32 user_id = 1;
}

message GetAddressesResponse {
  int32 code = 1;
  string message = 2;
  repeated Address addresses = 3;
}

message Address {
  uint32 id = 1;
  uint32 user_id = 2;
  string receiver_name = 3;
  string phone = 4;
  string address_detail = 5;
  bool is_default = 6;
}

message RegisterRequest {
  string username = 1 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "Username" }];
  string password = 2 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "Password" }];
  string phone = 3 [(grpc.gateway.protoc_gen_openapiv2.options.openapiv2_field) = { description: "Phone number" }];
}

message RegisterResponse {
  int32 code = 1;
  string message = 2;
  User data = 3;
}

message LoginRequest {
  string username = 1;
  string password = 2;
}

message LoginResponse {
  int32 code = 1;
  string message = 2;
  string token = 3;
}

message GetUserInfoRequest {
  uint32 user_id = 1;
}

message GetUserInfoResponse {
  int32 code = 1;
  string message = 2;
  User data = 3;
}

message User {
  uint32 id = 1;
  string username = 2;
  string phone = 3;
  string address = 4;
  int32 points = 5;
}